syntax = "proto3";
import "channel.proto";
import "message.proto";

option go_package = "github.com/samar2170/blackboxv3";

package blackboxv3;

service BlackBoxService {
    rpc Signup(SignupRequest) returns (SignupResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc CreateChannel(CreateChannelRequest) returns (CreateChannelResponse) {}
    rpc GetChannels(GetChannelsRequest) returns (GetChannelsResponse) {}
    rpc GetChannel(GetChannelRequest) returns (GetChannelResponse) {}
    rpc DeleteChannel(DeleteChannelRequest) returns (DeleteChannelResponse) {}
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
    rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse) {}
    // rpc SendMediaMessage(SendMediaMessageRequest) returns (SendMediaMessageResponse) {}
}

message SignupRequest {
    string username = 1;
    string pin = 2;
    string email = 3;
}

message SignupResponse {
    bool success = 1;
    string msg = 2;
}

message LoginRequest {
    string username = 1;
    string pin = 2;
}

message LoginResponse {
    bool success = 1;
    string token = 2;
    string msg = 3;
}

